fix clearfix gap on desktop site + adjust marign on price stamp

--- a/source/css/style.css.scss
+++ b/source/css/style.css.scss
@@ -9,6 +9,8 @@
  */
 body {
   background: url(../img/bg_mobile.jpg);
+  margin:0;
+  padding:0;
 }
 h1,h2,h3,h4,h5,h6 {
   text-transform: uppercase;
@@ -104,7 +106,7 @@ h1,h2,h3,h4,h5,h6 {
     & a {
       color: #fff;
       text-decoration: none;
-      text-shadow: 1px 1px 4px rgba(0, 0, 0, .5);  
+      text-shadow: 1px 1px 4px rgba(0, 0, 0, .8);  
     }
     &.register {
       margin: 0;
@@ -114,7 +116,7 @@ h1,h2,h3,h4,h5,h6 {
     }
     &.price {
       border: none;
-      padding: 0;
+      margin: 0;
       padding: 0;
       background: none;
       text-align: center;
@@ -589,6 +591,7 @@ h1,h2,h3,h4,h5,h6 {
   }
 
   #portrait {
+    margin-top: -100px; /* fix gap caused by clearfix */
     background: url(../img/portrait.jpg) 0 bottom no-repeat;  
     height: 1025px;
   }
